@@ -19,6 +19,7 @@ import formflow.library.data.UserFileRepositoryService;
 import formflow.library.file.FileValidationService;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpSession;
+
 import java.io.IOException;
 import java.time.OffsetDateTime;
 import java.util.ArrayList;
@@ -29,6 +30,9 @@ import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Optional;
 import java.util.UUID;
+
+import lombok.AllArgsConstructor;
+import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
 import org.jetbrains.annotations.Nullable;
 import org.springframework.boot.autoconfigure.EnableAutoConfiguration;
@@ -86,30 +90,60 @@ public class ScreenController extends FormFlowController {
     log.info("Screen Controller Created!");
   }
 
+  @AllArgsConstructor
+  @Getter
+  private class ScreenConfig {
+    String flowName;
+    ScreenNavigationConfiguration screenNavigationConfiguration;
+  }
+
   /**
    * Chooses which screen template and model data to render.
    *
-   * @param flow        The current flow name, not null
-   * @param screen      The current screen name in the flow, not null
-   * @param uuid        The uuid of a subflow entry, can be null
-   * @param httpSession The current httpSession, not null
+   * @param requestFlow   The current flow name, not null
+   * @param requestScreen The current screen name in the flow, not null
+   * @param requestUuid   The uuid of a subflow entry, can be null
+   * @param httpSession   The current httpSession, not null
    * @return the screen template with model data
    */
   @GetMapping(FLOW_SCREEN_PATH)
   ModelAndView getScreen(
-      @PathVariable String flow,
-      @PathVariable String screen,
+      @PathVariable(name = "flow") String requestFlow,
+      @PathVariable(name = "screen") String requestScreen,
       @RequestParam(required = false) Map<String, String> query_params,
-      @RequestParam(value = "uuid", required = false) String uuid,
+      @RequestParam(value = "uuid", required = false) String requestUuid,
       RedirectAttributes redirectAttributes,
       HttpSession httpSession,
       HttpServletRequest request,
       Locale locale
   ) {
-    log.info("GET getScreen (url: {}): flow: {}, screen: {}", request.getRequestURI().toLowerCase(), flow, screen);
-    // this will ensure that the screen and flow actually exist
-    ScreenNavigationConfiguration currentScreen = getScreenConfig(flow, screen);
+    log.info("GET getScreen (url: {}): flow: {}, screen: {}", request.getRequestURI().toLowerCase(), requestFlow, requestScreen);
+    // getScreenConfig() will ensure that the screen and flow actually exist
+    ScreenConfig screenConfig = getScreenConfig(requestFlow, requestScreen);
+    ScreenNavigationConfiguration currentScreen = screenConfig.getScreenNavigationConfiguration();
+    String flow = screenConfig.getFlowName();
+    String screen = currentScreen.getName();
+
     Submission submission = findOrCreateSubmission(httpSession, flow);
+
+    String uuid = null;
+    if (requestUuid != null && !requestUuid.isBlank()) {
+      uuid = getValidatedIterationUuid(submission, flow, currentScreen, requestUuid);
+      if (uuid == null) {
+        // catch to see if they are trying to go to a delete confirmation screen when the UUID is not present anymore.
+        // If so, redirect.
+        if (isDeleteConfirmationScreen(flow, screen)) {
+          ModelAndView nothingToDeleteModelAndView = handleDeleteBackBehavior(flow, screen, requestUuid, submission);
+          if (nothingToDeleteModelAndView != null) {
+            return nothingToDeleteModelAndView;
+          }
+        } else {
+          throwNotFoundError(submission.getFlow(), currentScreen.getName(),
+              String.format("UUID ('%s') not found in iterations for subflow '%s' in flow '%s', when navigating to '%s'",
+                  uuid, currentScreen.getSubflow(), submission.getFlow(), currentScreen.getName()));
+        }
+      }
+    }
 
     if (shouldRedirectDueToLockedSubmission(screen, submission, flow)) {
       String lockedSubmissionRedirectUrl = getLockedSubmissionRedirectUrl(flow, redirectAttributes, locale);
@@ -146,12 +180,7 @@ public class ScreenController extends FormFlowController {
 
     String formAction = createFormActionString(flow, screen);
     model.put("formAction", formAction);
-    if (isDeleteConfirmationScreen(flow, screen)) {
-      ModelAndView nothingToDeleteModelAndView = handleDeleteBackBehavior(flow, screen, uuid, submission);
-      if (nothingToDeleteModelAndView != null) {
-        return nothingToDeleteModelAndView;
-      }
-    }
+
 
     return new ModelAndView("%s/%s".formatted(flow, screen), model);
   }
@@ -245,8 +274,8 @@ public class ScreenController extends FormFlowController {
    * both.
    *
    * @param formData           The input data from current screen, can be null
-   * @param flow               The current flow name, not null
-   * @param screen             The current screen name in the flow, not null
+   * @param requestFlow        The current flow name, not null
+   * @param requestScreen      The current screen name in the flow, not null
    * @param httpSession        The HTTP session if it exists, can be null
    * @param request            The HttpServletRequest
    * @param redirectAttributes The attributes used/modified in the case of a redirect happening
@@ -256,8 +285,8 @@ public class ScreenController extends FormFlowController {
    */
   private ModelAndView handlePost(
       MultiValueMap<String, String> formData,
-      String flow,
-      String screen,
+      String requestFlow,
+      String requestScreen,
       HttpSession httpSession,
       HttpServletRequest request,
       RedirectAttributes redirectAttributes,
@@ -265,9 +294,13 @@ public class ScreenController extends FormFlowController {
       boolean submitSubmission
   ) throws SmartyException, IOException, InterruptedException {
 
-    log.info("POST postScreen (url: {}): flow: {}, screen: {}", request.getRequestURI().toLowerCase(), flow, screen);
-    // Checks if screen and flow exist
-    var currentScreen = getScreenConfig(flow, screen);
+    log.info("POST postScreen (url: {}): flow: {}, screen: {}", request.getRequestURI().toLowerCase(), requestFlow, requestScreen);
+    // Checks if screen and flow exist. If getScreenConfig runs successfully, then the flow and screen exist.
+    ScreenConfig screenConfig = getScreenConfig(requestFlow, requestScreen);
+    ScreenNavigationConfiguration currentScreen = screenConfig.getScreenNavigationConfiguration();
+    String flow = screenConfig.getFlowName();
+    String screen = currentScreen.getName();
+
     Submission submission = findOrCreateSubmission(httpSession, flow);
 
     if (shouldRedirectDueToLockedSubmission(screen, submission, flow)) {
@@ -319,17 +352,17 @@ public class ScreenController extends FormFlowController {
   /**
    * Chooses which screen template and model data to render in a subflow.
    *
-   * @param flow        The current flow name, not null
-   * @param screen      The current screen name in the subflow, not null
-   * @param uuid        The uuid of a subflow entry, not null
-   * @param httpSession The current httpSession, not null
+   * @param requestFlow   The current flow name, not null
+   * @param requestScreen The current screen name in the subflow, not null
+   * @param requestUuid   The uuid of a subflow entry, not null
+   * @param httpSession   The current httpSession, not null
    * @return the screen template with model data
    */
   @GetMapping({FLOW_SCREEN_PATH + "/{uuid}", FLOW_SCREEN_PATH + "/{uuid}/edit"})
   ModelAndView getSubflowScreen(
-      @PathVariable String flow,
-      @PathVariable String screen,
-      @PathVariable String uuid,
+      @PathVariable(name = "flow") String requestFlow,
+      @PathVariable(name = "screen") String requestScreen,
+      @PathVariable(name = "uuid") String requestUuid,
       HttpSession httpSession,
       HttpServletRequest request,
       RedirectAttributes redirectAttributes,
@@ -338,12 +371,22 @@ public class ScreenController extends FormFlowController {
     log.info(
         "GET getSubflowScreen (url: {}): flow: {}, screen: {}, uuid: {}",
         request.getRequestURI().toLowerCase(),
-        flow,
-        screen,
-        uuid);
+        requestFlow,
+        requestScreen,
+        requestUuid);
     // Checks if screen and flow exist
-    var currentScreen = getScreenConfig(flow, screen);
+    ScreenConfig screenConfig = getScreenConfig(requestFlow, requestScreen);
+    ScreenNavigationConfiguration currentScreen = screenConfig.getScreenNavigationConfiguration();
+    String flow = screenConfig.getFlowName();
+    String screen = currentScreen.getName();
+
     Submission submission = getSubmissionFromSession(httpSession, flow);
+    String uuid = getValidatedIterationUuid(submission, flow, currentScreen, requestUuid);
+    if (uuid == null) {
+      throwNotFoundError(submission.getFlow(), currentScreen.getName(),
+          String.format("UUID ('%s') not found in iterations for subflow '%s' in flow '%s', when navigating to '%s'",
+              uuid, currentScreen.getSubflow(), submission.getFlow(), currentScreen.getName()));
+    }
 
     if (shouldRedirectDueToLockedSubmission(screen, submission, flow)) {
       String lockedSubmissionRedirectUrl = getLockedSubmissionRedirectUrl(flow, redirectAttributes, locale);
@@ -378,18 +421,18 @@ public class ScreenController extends FormFlowController {
    * If validation of input data fails this will redirect the client to the same subflow screen so they can fix the data.
    * </p>
    *
-   * @param formData    The input data from current screen, can be null
-   * @param flow        The current flow name, not null
-   * @param screen      The current screen name in the flow, not null
-   * @param uuid        Unique id associated with the subflow's data, or `new` if it is a new iteration of the subflow. Not null.
-   * @param httpSession The HTTP session if it exists, not null
+   * @param formData      The input data from current screen, can be null
+   * @param requestFlow   The current flow name, not null
+   * @param requestScreen The current screen name in the flow, not null
+   * @param uuid          Unique id associated with the subflow's data, or `new` if it is a new iteration of the subflow. Not null.
+   * @param httpSession   The HTTP session if it exists, not null
    * @return a redirect to next screen
    */
   @PostMapping({FLOW_SCREEN_PATH + "/{uuid}", FLOW_SCREEN_PATH + "/{uuid}/edit"})
   RedirectView postSubflowScreen(
       @RequestParam(required = false) MultiValueMap<String, String> formData,
-      @PathVariable String flow,
-      @PathVariable String screen,
+      @PathVariable(name = "flow") String requestFlow,
+      @PathVariable(name = "screen") String requestScreen,
       @PathVariable String uuid,
       HttpSession httpSession,
       HttpServletRequest request,
@@ -399,12 +442,16 @@ public class ScreenController extends FormFlowController {
     log.info(
         "POST updateOrCreateIteration (url: {}): flow: {}, screen: {}, uuid: {}",
         request.getRequestURI().toLowerCase(),
-        flow,
-        screen,
+        requestFlow,
+        requestScreen,
         uuid);
 
-    // Checks to see if flow and screen exist
-    ScreenNavigationConfiguration currentScreen = getScreenConfig(flow, screen);
+    // Checks to see if flow and screen exist; If they do not, then this will throw an error
+    ScreenConfig screenConfig = getScreenConfig(requestFlow, requestScreen);
+    ScreenNavigationConfiguration currentScreen = screenConfig.getScreenNavigationConfiguration();
+    String flow = screenConfig.getFlowName();
+    String screen = currentScreen.getName();
+
     boolean isNewIteration = uuid.equalsIgnoreCase("new");
     String iterationUuid = isNewIteration ? UUID.randomUUID().toString() : uuid;
     FormSubmission formSubmission = new FormSubmission(formData);
@@ -512,10 +559,11 @@ public class ScreenController extends FormFlowController {
     }
 
     if (submission != null) {
-      var existingInputData = submission.getInputData();
-      var subflowArr = (ArrayList<Map<String, Object>>) existingInputData.get(subflow);
-      var entryToDelete = subflowArr.stream().filter(entry -> entry.get("uuid").equals(uuid)).findFirst();
-      entryToDelete.ifPresent(entry -> httpSession.setAttribute("entryToDelete", entry));
+      Map<Object, String> entryToDelete = (Map) submission.getSubflowEntryByUuid(subflow, uuid);
+
+      if (entryToDelete != null) {
+        httpSession.setAttribute("entryToDelete", entryToDelete);
+      }
     }
 
     return new ModelAndView(new RedirectView(String.format("/flow/%s/%s?uuid=%s", flow, deleteConfirmationScreen, uuid)));
@@ -524,7 +572,7 @@ public class ScreenController extends FormFlowController {
   /**
    * Deletes a subflow's input data set, based on that set's uuid.
    *
-   * @param flow        The current flow name, not null
+   * @param requestFlow The current flow name, not null
    * @param subflow     The current subflow name, not null
    * @param uuid        Unique id associated with the subflow's data, not null
    * @param httpSession The HTTP session if it exists, not null
@@ -533,7 +581,7 @@ public class ScreenController extends FormFlowController {
    */
   @PostMapping("{flow}/{subflow}/{uuid}/delete")
   ModelAndView deleteSubflowIteration(
-      @PathVariable String flow,
+      @PathVariable(name = "flow") String requestFlow,
       @PathVariable String subflow,
       @PathVariable String uuid,
       HttpSession httpSession,
@@ -544,11 +592,14 @@ public class ScreenController extends FormFlowController {
     log.info(
         "POST deleteSubflowIteration (url: {}): flow: {}, uuid: {}",
         request.getRequestURI().toLowerCase(),
-        flow,
+        requestFlow,
         uuid);
-    // Checks to make sure flow exists
-    String subflowEntryScreen = getFlowConfigurationByName(flow).getSubflows().get(subflow)
+    // Checks to make sure flow exists; if it doesn't an error is thrown
+    FlowConfiguration flowConfiguration = getFlowConfigurationByName(requestFlow);
+    String subflowEntryScreen = flowConfiguration.getSubflows().get(subflow)
         .getEntryScreen();
+    String flow = flowConfiguration.getName();
+
     Submission submission = getSubmissionFromSession(httpSession, flow);
     if (submission == null) {
       throw new ResponseStatusException(HttpStatus.BAD_REQUEST);
@@ -581,38 +632,53 @@ public class ScreenController extends FormFlowController {
 
     String reviewScreen = getFlowConfigurationByName(flow).getSubflows().get(subflow)
         .getReviewScreen();
-    return new ModelAndView(String.format("redirect:/flow/%s/" + reviewScreen, flow));
+    return new ModelAndView("redirect:/flow/%s/%s".formatted(flow, reviewScreen));
   }
 
   /**
    * Chooses the next screen template and model to render based on what is next in the flow.
    *
-   * @param flow        The current flow name, not null
-   * @param screen      The current screen name in the flow, not null
-   * @param httpSession The current httpSession, not null
+   * @param requestFlow   The current flow name, not null
+   * @param requestScreen The current screen name in the flow, not null
+   * @param httpSession   The current httpSession, not null
    * @return the screen template with model data, returns error page on error
    */
   @GetMapping(FLOW_SCREEN_PATH + "/navigation")
   ModelAndView navigation(
-      @PathVariable String flow,
-      @PathVariable String screen,
+      @PathVariable(name = "flow") String requestFlow,
+      @PathVariable(name = "screen") String requestScreen,
       HttpSession httpSession,
       HttpServletRequest request,
-      @RequestParam(required = false) String uuid
+      @RequestParam(name = "uuid", required = false) String requestUuid
   ) {
-    log.info("GET navigation (url: {}): flow: {}, screen: {}", request.getRequestURI().toLowerCase(), flow, screen);
-    var currentScreen = getScreenConfig(flow, screen);
+    log.info("GET navigation (url: {}): flow: {}, screen: {}", request.getRequestURI().toLowerCase(), requestFlow, requestScreen);
+    // Checks if the flow and screen exist
+    ScreenConfig screenConfig = getScreenConfig(requestFlow, requestScreen);
+    ScreenNavigationConfiguration currentScreen = screenConfig.getScreenNavigationConfiguration();
+    String flow = screenConfig.getFlowName();
+    String screen = currentScreen.getName();
+
     Submission submission = getSubmissionFromSession(httpSession, flow);
     log.info(
         "Current submission ID is: {} and current Session ID is: {}", submission.getId(), httpSession.getId());
-    // Checks if the screen and flow exist
     if (submission == null) {
       throwNotFoundError(flow, screen,
           String.format("Submission not found in session for flow '{}', when navigating to '{}'", flow, screen));
     }
+
+    String uuid = null;
+    if (requestUuid != null && !requestUuid.isBlank()) {
+      uuid = getValidatedIterationUuid(submission, flow, currentScreen, requestUuid);
+      if (uuid == null) {
+        throwNotFoundError(submission.getFlow(), currentScreen.getName(),
+            String.format("UUID ('%s') not found in iterations for subflow '%s' in flow '%s', when navigating to '%s'",
+                uuid, currentScreen.getSubflow(), submission.getFlow(), currentScreen.getName()));
+      }
+    }
+
     String nextScreen = getNextViewableScreen(flow, getNextScreenName(submission, currentScreen, uuid), uuid, submission);
 
-    boolean isCurrentScreenLastInSubflow = getScreenConfig(flow, nextScreen).getSubflow() == null;
+    boolean isCurrentScreenLastInSubflow = getScreenConfig(flow, nextScreen).getScreenNavigationConfiguration().getSubflow() == null;
     String redirectString;
     if (uuid != null) {
       if (isCurrentScreenLastInSubflow) {
@@ -641,16 +707,20 @@ public class ScreenController extends FormFlowController {
    * @return Next viewable screen if the current one does not satisfy the condition, otherwise the current screen
    */
   private String getNextViewableScreen(String flow, String screen, String uuid, Submission submission) {
-    var currentScreen = getScreenConfig(flow, screen);
+    ScreenConfig screenConfig = getScreenConfig(flow, screen);
+    ScreenNavigationConfiguration currentScreen = screenConfig.getScreenNavigationConfiguration();
+
     if (shouldRedirectToNextScreen(uuid, currentScreen, submission)) {
       String nextScreen = getNextScreenName(submission, currentScreen, uuid);
       return getNextViewableScreen(flow, nextScreen, uuid, submission);
     }
+
     return screen;
   }
 
   private String getNextScreenName(Submission submission,
-      ScreenNavigationConfiguration currentScreen, String subflowUuid) {
+                                   ScreenNavigationConfiguration currentScreen,
+                                   String subflowUuid) {
     NextScreen nextScreen;
 
     List<NextScreen> nextScreens = getConditionalNextScreen(currentScreen, submission, subflowUuid);
@@ -672,13 +742,13 @@ public class ScreenController extends FormFlowController {
    * @param screen the screen that configuration is wanted for
    * @return navigation configuration for the screen
    */
-  private ScreenNavigationConfiguration getScreenConfig(String flow, String screen) {
+  private ScreenConfig getScreenConfig(String flow, String screen) {
     FlowConfiguration currentFlowConfiguration = getFlowConfigurationByName(flow);
     ScreenNavigationConfiguration currentScreen = currentFlowConfiguration.getScreenNavigation(screen);
     if (currentScreen == null) {
       throwNotFoundError(flow, screen, "Screen could not be found in flow configuration for flow " + flow + ".");
     }
-    return currentFlowConfiguration.getScreenNavigation(screen);
+    return new ScreenConfig(currentFlowConfiguration.getName(), currentScreen);
   }
 
   private Boolean isConditionalNavigation(ScreenNavigationConfiguration currentScreen) {
@@ -695,7 +765,7 @@ public class ScreenController extends FormFlowController {
    * @return List<NextScreen> list of next screens
    */
   private List<NextScreen> getConditionalNextScreen(ScreenNavigationConfiguration currentScreen,
-      Submission submission, String subflowUuid) {
+                                                    Submission submission, String subflowUuid) {
     return currentScreen.getNextScreens().stream()
         .filter(nextScreen -> conditionManager.conditionExists(nextScreen.getCondition()))
         .filter(nextScreen -> {
@@ -714,7 +784,7 @@ public class ScreenController extends FormFlowController {
   }
 
   private Boolean isIterationStartScreen(String flow, String screen) {
-    HashMap<String, SubflowConfiguration> subflows = getFlowConfigurationByName(flow).getSubflows();
+    Map<String, SubflowConfiguration> subflows = getFlowConfigurationByName(flow).getSubflows();
     if (subflows == null) {
       return false;
     }
@@ -728,7 +798,7 @@ public class ScreenController extends FormFlowController {
   }
 
   private Map<String, Object> createModel(String flow, String screen, HttpSession httpSession, Submission submission,
-      String uuid, HttpServletRequest request) {
+                                          String uuid, HttpServletRequest request) {
     Map<String, Object> model = new HashMap<>();
     FlowConfiguration flowConfig = getFlowConfigurationByName(flow);
     String subflowName = flowConfig.getFlow().get(screen).getSubflow();
@@ -743,7 +813,7 @@ public class ScreenController extends FormFlowController {
     }
 
     // Put subflow on model if on subflow delete confirmation screen
-    HashMap<String, SubflowConfiguration> subflows = getFlowConfigurationByName(flow).getSubflows();
+    Map<String, SubflowConfiguration> subflows = getFlowConfigurationByName(flow).getSubflows();
     if (subflows != null) {
       List<String> subflowFromDeleteConfirmationConfig = subflows.entrySet().stream()
           .filter(entry ->
@@ -798,12 +868,14 @@ public class ScreenController extends FormFlowController {
     if (RequestContextUtils.getInputFlashMap(request) != null) {
       model.put("lockedSubmissionMessage", RequestContextUtils.getInputFlashMap(request).get("lockedSubmissionMessage"));
     }
+    
+    model.put("requiredInputs", ValidationService.getRequiredInputs(flow));
 
     return model;
   }
 
   private void handleErrors(HttpSession httpSession, Map<String, List<String>> errorMessages,
-      FormSubmission formSubmission) {
+                            FormSubmission formSubmission) {
     if (!errorMessages.isEmpty()) {
       httpSession.setAttribute("errorMessages", errorMessages);
       httpSession.setAttribute("formDataSubmission", formSubmission.getFormData());
@@ -814,7 +886,7 @@ public class ScreenController extends FormFlowController {
   }
 
   private Boolean isDeleteConfirmationScreen(String flow, String screen) {
-    HashMap<String, SubflowConfiguration> subflows = getFlowConfigurationByName(flow).getSubflows();
+    Map<String, SubflowConfiguration> subflows = getFlowConfigurationByName(flow).getSubflows();
     if (subflows == null) {
       return false;
     }
@@ -824,10 +896,9 @@ public class ScreenController extends FormFlowController {
 
   @Nullable
   private ModelAndView handleDeleteBackBehavior(String flow, String screen, String uuid,
-      Submission submission) {
+                                                Submission submission) {
     ModelMap model = new ModelMap();
-    String subflowName = getFlowConfigurationByName(
-        flow).getSubflows().entrySet().stream()
+    String subflowName = getFlowConfigurationByName(flow).getSubflows().entrySet().stream()
         .filter(entry -> entry.getValue().getDeleteConfirmationScreen().equals(screen))
         .toList().get(0).getKey();
     ArrayList<Map<String, Object>> subflow = (ArrayList<Map<String, Object>>) submission.getInputData().get(subflowName);
@@ -873,5 +944,41 @@ public class ScreenController extends FormFlowController {
     redirectAttributes.addFlashAttribute("lockedSubmissionMessage",
         messageSource.getMessage("general.locked-submission", null, locale));
     return String.format("/flow/%s/%s", flow, lockedSubmissionRedirectPage);
+  }
+
+  /**
+   * Return the validated UUID in String for, or returns null if not found.
+   *
+   * @param submission    The submission to search in
+   * @param flow          The current flow we are working in
+   * @param currentScreen The current screen we are going to
+   * @param uuidToVerify  The String UUID to validate
+   * @return Validated UUID as String, or returns null if not found
+   */
+  private String getValidatedIterationUuid(Submission submission, String flow, ScreenNavigationConfiguration currentScreen, String uuidToVerify) {
+    FlowConfiguration flowConfiguration = getFlowConfigurationByName(flow);
+    if (flowConfiguration == null) {
+      return null;
+    }
+
+    Map<String, Object> iteration = null;
+    List<String> subflowNameList = new ArrayList<>();
+
+    // see if we have a specific subflow to look in
+    if (currentScreen.getSubflow() != null) {
+      subflowNameList.add(currentScreen.getSubflow());
+    } else {
+      // we don't know the subflow, so check them all
+      subflowNameList.addAll(flowConfiguration.getSubflows().keySet().stream().toList());
+    }
+
+    for (String subflowName : subflowNameList) {
+      iteration = submission.getSubflowEntryByUuid(subflowName, uuidToVerify);
+      if (iteration != null) {
+        break;
+      }
+    }
+
+    return iteration != null ? (String) iteration.get("uuid") : null;
   }
 }
